[package]
name = "whole_sum_boi_discord"
version = "0.2.0"
edition = "2021"
publish = false


[dependencies]
serenity = { version = "0.11.2", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
rumqttc = "0.13.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
simplelog = "0.12"
log = "0.4"
config = "0.11"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
structopt = "0.3"
mqtt-router = { git = "https://github.com/dmweis/mqtt-router", branch = "main" }
